--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Task Manager</h1>
     <form action="/add" method="post">
-        <input type="text" name="task" placeholder="Enter a task">
+        <input type="text" name="task" placeholder="Enter a task" required>
         <button type="submit">Add Task</button>
     </form>
     <ul>
